--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+JP:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -37,4 +36,25 @@
       <section class="details">
         <article class="detail-card">
           <p class="detail-card__label">タイトル</p>
-          <p class="
+          <p class="detail-card__value">
+            AI勉強会「はじめての生成AI活用」
+          </p>
+        </article>
+
+        <article class="detail-card">
+          <p class="detail-card__label">開催日時</p>
+          <p class="detail-card__value">
+            2024年11月20日（水）18:30 – 20:30
+          </p>
+        </article>
+
+        <article class="detail-card">
+          <p class="detail-card__label">場所</p>
+          <p class="detail-card__value">
+            本社 8F Innovation Studio / オンライン配信あり
+          </p>
+        </article>
+      </section>
+    </main>
+  </body>
+</html>
